--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </script>
   </head>
   <body>
+    <h1>AIE Assessment</h1>
+    <p>Hello, welcome to the Website created for my game. This is for an assessment task at AIE.</p>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
