--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>yeet yeet</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="TemplateData/style.css">
 </head>
     <body>
         <h1>Hello</h1>
