--- a/gamepage.html
+++ b/gamepage.html
@@ -15,6 +15,7 @@
   <body>
     <h1>AIE Assessment</h1>
     <p>Hello, welcome to the Website created for my game. This is for an assessment task at AIE.</p>
+    <p>Known Issues: Fullscreen doesnt work, Resolution doesnt display any results(make it so the box doesnt appear if not unity standalone?).</p>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
