--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>yeet yeet</title>
+    <title>Games</title>
     <link rel="stylesheet" href="TemplateData/style.css">
 </head>
     <body>
-        <h1>Hello</h1>
-        <h2>AIE Assessment</h2>
-        <p>Welcome to the landing page of my website. This website was created for the assessment done at AIE.</p>
-        <p><a href = "gamepage.html">Click here to go to the game!</a></p>
+        <h1>AIE Assesment Webpage</h1>
+        <h2>Hello</h2>
+        <p>Welcome to the landing page of my website. This website was created for the assessment done at AIE.
+            Below are some pictures of the game in developement.</p>
+        <p><a href = "pages/gamepage.html"><button>Click here to go to the game!</button></a></p>
     </body>
 </html>
