--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>AIE Assesment Webpage</h1>
         <h2>Hello</h2>
         <p>Welcome to the landing page of my website. This website was created for the assessment done at AIE.
-            Below are some pictures of the game in developement.</p>
+            Below are some pictures of the game in development.</p>
         <p><a href = "gamepage.html"><button>Click here to go to the game!</button></a></p>
     </body>
 </html>
