--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h2>Hello</h2>
         <p>Welcome to the landing page of my website. This website was created for the assessment done at AIE.
             Below are some pictures of the game in development.</p>
+            <img source="images/obstaclesandpickups.png">
         <p><a href = "gamepage.html"><button>Click here to go to the game!</button></a></p>
     </body>
 </html>
