--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h2>Hello</h2>
         <p>Welcome to the landing page of my website. This website was created for the assessment done at AIE.
             Below are some pictures of the game in development.</p>
-            <img src="images/obstaclesandpickups.png" alt="All of the obstacles and some pickups seen in the game">
+            <img src="images/obstaclesandpickups.png" alt="All of the obstacles and some pickups seen in the game" height="350" width="500">
         <p><a href = "gamepage.html"><button>Click here to go to the game!</button></a></p>
     </body>
 </html>
