--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
             <img src="images/obstaclesandpickups.png" alt="All of the obstacles and some pickups seen in the game" class="center-left">
             <img src="images/premaderoads.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences." class="center">
             <img src="images/whileplaying.png" alt="a screenshot of the game while playing from a different angle." class="center-right">
-        <p><a href = "gamepage.html"><button>Click here to go to the game!</button></a></p>
+        <p><a href = "gamepage.html"><button class="primarybutton">Click here to go to the game!</button></a></p>
     </body>
 </html>
