--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Games</title>
     <link rel="stylesheet" href="TemplateData/style.css">
 </head>
     <body>
-        <h1>AIE Assesment Webpage</h1>
-        <h2>Hello</h2>
-        <p>Welcome to the landing page of my website. This website was created for the assessment done at AIE.
-            Below are some pictures of the game in development.</p>
-            <img src="images/obstaclesandpickups.png" alt="All of the obstacles and some pickups seen in the game" class="center-left">
-            <img src="images/premaderoads.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences." class="center">
-            <img src="images/whileplaying.png" alt="a screenshot of the game while playing from a different angle." class="center-right">
-        <p><a href = "gamepage.html"><button class="primarybutton">Click here to go to the game!</button></a></p>
+        <div class="Main-Container">
+            <h1>AIE Assesment Webpage</h1>
+                <div class="Main-InsideContainer"><p>Welcome to the landing page of my website. This website was created for the assessment done at AIE.
+                Below are some pictures of the game in development.</p>
+                <div class="Images">    
+                    <div class="column"><img src="images/obstaclesandpickups.png" alt="All of the obstacles and some pickups seen in the game" width="500" height="250" float="left"></div>
+                    <div class="column"><img src="images/premaderoads.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences."width="500" height="250" float="center" ></div>
+                    <div class="column"><img src="images/whileplaying.png" alt="a screenshot of the game while playing from a different angle."width="500" height="250" float="right"></div></div>
+        <p><a href = "gamepage.html"><button class="primarybutton">Click here to go to the game!</button></a></p></div>
     </body>
 </html>
