--- a/gamepage.html
+++ b/gamepage.html
@@ -13,15 +13,18 @@
     </script>
   </head>
   <body>
-      <h1>AIE Assessment</h1>
+      <div class="Main-Container">
+        <h1>AIE Assessment</h1>
+      <div class="Main-InsideContainer">  
       <p>Hello, welcome to the Website created for my game. This is for an assessment task at AIE.</p>
       <p>Known Issues: The fullscreen button below the player doesnt work(the ingame toggle does), Resolution doesnt display any results(make it so the box doesnt appear if not unity standalone?).</p>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">The Runner</div>
+            <div class="webgl-logo"></div>           
+            <div class="title">The Runner</div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
