--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
                     <div class="column"><img src="images/obstaclesandpickups.png" alt="All of the obstacles and some pickups seen in the game" width="500" height="250" float="left"></div>
                     <div class="column"><img src="images/premaderoads.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences."width="500" height="250" float="center" ></div>
                     <div class="column"><img src="images/whileplaying.png" alt="a screenshot of the game while playing from a different angle."width="500" height="250" float="right"></div></div>
-        <p><a href = "gamepage.html"><button class="primarybutton">Click here to go to the game!</button></a></p></div>
+        <a href = "gamepage.html"><button class="primarybutton" style="vertical-align:middle"><span>Play Now!</span></button></a></div>
     </body>
 </html>
