Added Sidebar Navigation

--- a/gamepage.html
+++ b/gamepage.html
@@ -13,6 +13,12 @@
     </script>
   </head>
   <body>
+      <ul>
+          <li><a href="index.html"><button class="primarybutton" style="vertical-align:middle"><span>Home</span></button></a></li>
+          <li><a class="CurrentPage" href = "gamepage.html"><button class="Currentbutton" style="vertical-align:middle"><span>Play Now!</span></button></a></li>
+          <li><a href="About.html"><button class="primarybutton" style="vertical-align:middle"><span>About</span></button></a></li>
+          <li><a href="more.html"><button class="primarybutton" style="vertical-align:middle"><span>More...</span></button></a></li>
+      </ul>
       <div class="Main-Container">
         <h1>AIE Assessment</h1>
       <div class="Main-InsideContainer">  
