--- a/gamepage.html
+++ b/gamepage.html
@@ -25,7 +25,7 @@
       <p>Hello, welcome to the Website created for my game. This is for an assessment task at AIE.</p>
       <p>Known Issues: Resolution doesnt display any results(make it so the box doesnt appear if not unity standalone?).</p>
     <div class="webgl-content">
-      <div id="gameContainer" style="width: 960px; height: 600px"></div>
+      <div class="column"id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
             <div class="webgl-logo"></div>           
             <div class="title">The Runner</div>
