tweaking webgl player placement

--- a/gamepage.html
+++ b/gamepage.html
@@ -21,16 +21,12 @@
       </ul>
       <div class="Main-Container">
         <h1>AIE Assessment</h1>
-      <div class="Main-InsideContainer">  
+      <div class="Main-InsideContainer">
+          <div class="webgl-content">  
       <p>Hello, welcome to the Website created for my game. This is for an assessment task at AIE.</p>
-      <p>Known Issues: Resolution doesnt display any results(make it so the box doesnt appear if not unity standalone?).
-    <div class="webgl-content">
-      <div class="column"id="gameContainer" style="width: 960px; height: 600px"></div>
-      <div class="footer">                      
-            <div class="title">The Runner</div>
-          </div>
+      <p>Known Issues: Resolution doesnt display any results(make it so the box doesnt appear if not unity standalone?).</p>       
+      <div id="gameContainer" style="width: 960px; height: 600px"></div>
         </div>
-      </p>
       </div>
     </div>
   </body>
