--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <li><a class="CurrentPage" href="index.html"><button class="Currentbutton" style="vertical-align:middle"><span>Home</span></button></a></li>
             <li><a href = "gamepage.html"><button class="primarybutton" style="vertical-align:middle"><span>Play Now!</span></button></a></li>
             <li><a href="About.html"><button class="primarybutton" style="vertical-align:middle"><span>About</span></button></a></li>
-            <li><a href="More.html"><button class="primarybutton" style="vertical-align:middle"><span>More...</span></button></a></li>
+            <li><a href="more.html"><button class="primarybutton" style="vertical-align:middle"><span>More...</span></button></a></li>
         </ul>
         <div class="Main-Container">
             <h1>AIE Assesment Webpage</h1>
