--- a/About.html
+++ b/About.html
@@ -7,9 +7,9 @@
 </head>
     <body>
         <ul>
-            <li><a href="index.html"><button class="Currentbutton" style="vertical-align:middle"><span>Home</span></button></a></li>
+            <li><a href="index.html"><button class="primarybutton" style="vertical-align:middle"><span>Home</span></button></a></li>
             <li><a href = "gamepage.html"><button class="primarybutton" style="vertical-align:middle"><span>Play Now!</span></button></a></li>
-            <li><a class="CurrentPage" href="About.html"><button class="primarybutton" style="vertical-align:middle"><span>About</span></button></a></li>
+            <li><a class="CurrentPage" href="About.html"><button class="Currentbutton" style="vertical-align:middle"><span>About</span></button></a></li>
             <li><a href="more.html"><button class="primarybutton" style="vertical-align:middle"><span>More...</span></button></a></li>
         </ul>
         <div class="Main-Container">
