--- a/More.html
+++ b/More.html
@@ -9,12 +9,12 @@
         <ul>
             <li><a href="index.html"><button class="primarybutton" style="vertical-align:middle"><span>Home</span></button></a></li>
             <li><a href = "gamepage.html"><button class="primarybutton" style="vertical-align:middle"><span>Play Now!</span></button></a></li>
-            <li><a class="CurrentPage" href="About.html"><button class="Currentbutton" style="vertical-align:middle"><span>About</span></button></a></li>
-            <li><a href="extra.html"><button class="primarybutton" style="vertical-align:middle"><span>More...</span></button></a></li>
+            <li><a href="About.html"><button class="primarybutton" style="vertical-align:middle"><span>About</span></button></a></li>
+            <li><a class="CurrentPage" href="extra.html"><button class="Currentbutton" style="vertical-align:middle"><span>More...</span></button></a></li>
         </ul>
         <div class="Main-Container">
             <h1>AIE Assesment Webpage</h1>
-                <div class="Main-InsideContainer"><p>The game played on this website was an created for an assessment at AIE. The game was created using Unity, with assets used from Unitys Asset store.</p>
+                <div class="Main-InsideContainer"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet venenatis mauris, vel viverra eros. Integer enim purus, blandit in fermentum in, bibendum ac nibh. Nam orci ligula, posuere vitae libero ac, lacinia egestas quam. Nam hendrerit condimentum justo. Pellentesque ultricies auctor nisi eu scelerisque. Sed varius libero ut convallis facilisis. Pellentesque dictum efficitur mauris, sed vestibulum nunc auctor a.</p>
                 <div class="Images">    
                     <div class="column"><img src="images/obstaclesandpickups.png" alt="All of the obstacles and some pickups seen in the game" width="500" height="250" float="left"></div>
                     <div class="column"><img src="images/premaderoads.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences."width="500" height="250" float="center" ></div>
