--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="extra.html"><button class="primarybutton" style="vertical-align:middle"><span>More...</span></button></a></li>
         </ul>
         <div class="Main-Container">
-            <h1>AIE Assesment Webpage</h1>
+            <h1>AIE Assessment Webpage</h1>
                 <div class="Main-InsideContainer"><p>Welcome to the landing page of my website. This website was created for the assessment done at AIE.
                 Below are some pictures of the game in development.</p>
                 <div class="Images">    
