added text to more pages

--- a/gamepage.html
+++ b/gamepage.html
@@ -20,12 +20,12 @@
           <li><a href="extra.html"><button class="primarybutton" style="vertical-align:middle"><span>More...</span></button></a></li>
       </ul>
       <div class="Main-Container">
-        <h1>AIE Assessment</h1>
+        <h1>The Runner Game</h1>
       <div class="Main-InsideContainer"> 
           <div class="webgl-content">
               <div id="gameContainer" style="width: 960px; height: 600px"></div>
             </div>
-            <p>Hello, welcome to the Website created for my game. This is for an assessment task at AIE.</p>
+            <p>The Runner is a game that was created for an Assessment, it is an infinite runner with 3 seperate power-ups. The only controls for the game are "A" to move left and "D" to move right with ESC to pause the game.</p>
             <p>Known Issues: Resolution doesnt display any results(make it so the box doesnt appear if not unity standalone?).</p>     
       </div>
     </div>
