--- a/extra.html
+++ b/extra.html
@@ -13,8 +13,8 @@
             <li><a class="CurrentPage" href="extra.html"><button class="Currentbutton" style="vertical-align:middle"><span>More...</span></button></a></li>
         </ul>
         <div class="Main-Container">
-            <h1>AIE Assessment Webpage</h1>
-                <div class="Main-InsideContainer"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet venenatis mauris, vel viverra eros. Integer enim purus, blandit in fermentum in, bibendum ac nibh. Nam orci ligula, posuere vitae libero ac, lacinia egestas quam. Nam hendrerit condimentum justo. Pellentesque ultricies auctor nisi eu scelerisque. Sed varius libero ut convallis facilisis. Pellentesque dictum efficitur mauris, sed vestibulum nunc auctor a.</p>
+            <h1>Extra Page</h1>
+                <div class="Main-InsideContainer"><p>This page is here to show off screenshots of other parts of the game not found on the other pages of the website.</p>
                 <div class="Images">    
                     <div class="column"><img src="images/obstaclesandpickups.png" alt="All of the obstacles and some pickups seen in the game" width="500" height="250" float="left"></div>
                     <div class="column"><img src="images/premaderoads.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences."width="500" height="250" float="center" ></div>
