--- a/About.html
+++ b/About.html
@@ -17,8 +17,8 @@
                 <div class="Main-InsideContainer"><p>When creating the game I faced several issues. Majority of the issues were typos that were simple to fix, however some of the issues were a little more complicated like disabling the spawning of a certain power-up but not all.</p>
                 <div class="Images">    
                     <div class="column"><img src="images/MainMenu.png" alt="A picture of the main menu." width="500" height="250" float="left"></div>
-                    <div class="column"><img src="images/premaderoads.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences."width="500" height="250" float="center" ></div>
-                    <div class="column"><img src="images/whileplaying.png" alt="a screenshot of the game while playing from a different angle."width="500" height="250" float="right"></div></div>
+                    <div class="column"><img src="images/ingame2.png" alt="This is the players perspective while playing the game."width="500" height="250" float="center" ></div>
+                    <div class="column"><img src="images/SettingsMenu.PNG" alt="a screenshot of the game while playing from a different angle."width="500" height="250" float="right"></div></div>
         </div>
     </body>
 </html>
