--- a/extra.html
+++ b/extra.html
@@ -16,9 +16,9 @@
             <h1>Extra Page</h1>
                 <div class="Main-InsideContainer"><p>This page is here to show off screenshots of other parts of the game not found on the other pages of the website.</p>
                 <div class="Images">    
-                    <div class="column"><img src="images/obstaclesandpickups.png" alt="All of the obstacles and some pickups seen in the game" width="500" height="250" float="left"></div>
-                    <div class="column"><img src="images/premaderoads.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences."width="500" height="250" float="center" ></div>
-                    <div class="column"><img src="images/whileplaying.png" alt="a screenshot of the game while playing from a different angle."width="500" height="250" float="right"></div></div>
+                    <div class="column"><img src="images/Highscores.png" alt="All of the obstacles and some pickups seen in the game" width="600" height="300" float="left"></div>
+                    <div class="column"><img src="images/ingame.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences."width="600" height="300" float="center" ></div>
+                </div>
         </div>
     </body>
 </html>
