tweaks to names

--- a/About.html
+++ b/About.html
@@ -18,7 +18,7 @@
                 <div class="Images">    
                     <div class="column"><img src="images/MainMenu.png" alt="A picture of the main menu." width="500" height="250" float="left"></div>
                     <div class="column"><img src="images/ingame2.png" alt="This is the players perspective while playing the game."width="500" height="250" float="center" ></div>
-                    <div class="column"><img src="images/SettingsMenu.PNG" alt="a screenshot of the game while playing from a different angle."width="500" height="250" float="right"></div></div>
+                    <div class="column"><img src="images/Settings.png" alt="a screenshot of the game while playing from a different angle."width="500" height="250" float="right"></div></div>
         </div>
     </body>
 </html>
