--- a/extra.html
+++ b/extra.html
@@ -16,8 +16,8 @@
             <h1>Extra Page</h1>
                 <div class="Main-InsideContainer"><p>This page is here to show off screenshots of other parts of the game not found on the other pages of the website.</p>
                 <div class="Images">    
-                    <div class="column"><img src="images/Highscores.png" alt="All of the obstacles and some pickups seen in the game" width="600" height="300" float="left"></div>
-                    <div class="column"><img src="images/ingame.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences."width="600" height="300" float="center" ></div>
+                    <div class="column"><img src="images/hghscrs.png" alt="All of the obstacles and some pickups seen in the game" width="500" height="300" float="left"></div>
+                    <div class="column"><img src="images/ingame.png" alt="All of the roads that get instantiated. This screenshot was taken before adding fences."width="500" height="300" float="center" ></div>
                 </div>
         </div>
     </body>
