changed image name

--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
                 <div class="Main-InsideContainer"><p>When creating the game I faced several issues. Majority of the issues were typos that were simple to fix, however some of the issues were a little more complicated like disabling the spawning of a certain power-up but not all.</p>
                 <div class="Images">    
                     <div class="column"><img src="images/MainMenu.png" alt="A picture of the main menu." width="500" height="250" float="left"></div>
-                    <div class="column"><img src="images/ingame2.png" alt="This is the players perspective while playing the game."width="500" height="250" float="center" ></div>
+                    <div class="column"><img src="images/ingameUI.png" alt="This is the ingame UI"width="500" height="250" float="center" ></div>
                     <div class="column"><img src="images/Settings.png" alt="a screenshot of the game while playing from a different angle."width="500" height="250" float="right"></div></div>
         </div>
     </body>
