added reasoning for highscores not working

--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
         </ul>
         <div class="Main-Container">
             <h1>About the Game</h1>
-                <div class="Main-InsideContainer"><p>When creating the game I faced several issues. Majority of the issues were typos that were simple to fix, however some of the issues were a little more complicated like disabling the spawning of a certain power-up but not all.</p>
+                <div class="Main-InsideContainer"><p>When creating the game I faced several issues. Majority of the issues were typos that were simple to fix, however some of the issues were a little more complicated like disabling the spawning of a certain power-up but not all. For the online version of the game I have disabled the highscores feature.</p>
                 <div class="Images">    
                     <div class="column"><img src="images/MainMenu.png" alt="A picture of the main menu." width="500" height="250" float="left"></div>
                     <div class="column"><img src="images/ingameUI.png" alt="This is the ingame UI"width="500" height="250" float="center" ></div>
